# bazel_testing

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.bazel.md  package.json  pnpm-lock.yaml  tsconfig.json
.aspect/bazelrc/: performance.bazelrc
.aspect/cli/: config.yaml
.aspect/workflows/: config.yaml
apps/alpha/: BUILD.bazel
apps/alpha/src/: main.ts
apps/beta/: BUILD.bazel
apps/beta/src/: main.js
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel
